--- a/src/lambda/patchNutritionProduct/tsconfig.json
+++ b/src/lambda/patchNutritionProduct/tsconfig.json
@@ -1,11 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
+    "target": "es2020",
     "strict": true,
+    "preserveConstEnums": true,
+    "noEmit": true,
+    "sourceMap": false,
+    "module":"commonjs",
+    "moduleResolution":"node",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
     "outDir": "./dist"
   },
   "include": ["src/**/*.ts"],
